feat: add api/news/{id} method
